styles.css
body {
  margin: 0;
  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: 'Inter', source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

#red-header {
  /* position: absolute; */
  /* width: 1639px; */
  height: -1450px;
  /* left: -64px; */
  /* top: -1000px; */
}

h1,
h2 {
  text-align: center;
}

h3 {
  font-style: normal !important;
  font-weight: 600 !important;
  line-height: 34px !important;
  font-size: 28px !important;
}

h4 {
  font-size: 24px !important;
  font-weight: 600 !important;
  line-height: 29px !important;
  letter-spacing: 0em !important;
  text-align: left;
  color: #dc3545;
}
#title-card {
  position: relative;
}

#title-card::before {
  z-index: -1;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0.02;
  position: absolute;
  content: '';
  background-image: url(assets/icon.svg);
  background-repeat: repeat;
  background-position: top right;
}

#header-ellipse {
  position: absolute;
  left: 50%;
  transform: translate(-50%, 0%);
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
}

#title-container {
  padding-top: 107px;
}

#title-stack {
  gap: 89px;
  align-items: normal !important;
}

#main-title {
  text-align: left;
  margin-bottom: 89px;
  font-style: normal !important;
  font-weight: 700 !important;
  font-size: 124px !important;
  line-height: 150px !important;
  color: #adadad;
}

.vstack {
  flex: none !important;
}

/* //styleName: Desktop title;
font-family: Inter;
font-size: 124px;
font-weight: 700;
line-height: 150px;
letter-spacing: 0em;
text-align: left;
 */

#vote-title {
  color: #dc3545;
  position: absolute;
}

#pink-oval {
  position: absolute;
  z-index: 0;
}

#ballot-box {
  margin-top: 55px;
}

/* .register-button-desktop {
  height: 74px;
  width: 654px;
  border-radius: 16px;
  font-size: 20px;
  font-weight: 600; } */

/* .register-button-tablet {
  height: 74px;
width: 619px;
border-radius: 14px;
text size: 20px;
weight: 600
 } */

/* .register-button-mobile {
  height: 46px;
width: 333px;
border-radius: 8px;
text size: 18px;
weight: 600
 } */

#about-section {
  margin-top: 96px;
  width: 495px;
}

.btn {
  padding: 14px 24px !important;
  font-size: 16px !important;
  line-height: 18px !important;
  font-weight: 600 !important;
}

.btn-register {
  border-color: #28a745 !important;
  background-color: #e6f2ec !important;
  box-shadow: 4px 4px 0px 0px #bdccc4;
  border: 1px solid #28a745 !important;
  box-shadow: 4px 4px 0px #bdccc4 !important;
  border-radius: 16px !important;
  color: #107c46 !important;
  font-style: normal !important;
  /* laptop styling */
  width: 654px;
  font-weight: 600 !important;
  font-size: 20px !important;
  line-height: 24px !important;
  letter-spacing: 0.02em !important;
  padding: 25px 0px !important;
}

.btn-success {
  background-color: #28a745 !important;
  border-color: #28a745 !important;
  text-align: left !important;
}

.btn-outline-success {
  --bs-btn-color: #28a745 !important;
  --bs-btn-border-color: #28a745 !important;
  --bs-btn-hover-color: #fff;
  --bs-btn-hover-bg: #28a745 !important;
  --bs-btn-hover-border-color: #28a745 !important;
  --bs-btn-focus-shadow-rgb: 25, 135, 84;
  --bs-btn-active-color: #fff;
  --bs-btn-active-bg: #28a745 !important;
  --bs-btn-active-border-color: #28a745 !important;
  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
  --bs-btn-disabled-color: #28a745 !important;
  --bs-btn-disabled-bg: transparent;
  --bs-btn-disabled-border-color: #28a745 !important;
  --bs-gradient: none;
}

#form-section {
  /* background-color: #f9d9dc; */
  background-image: url('assets/Pink\ background.jpg');
  /* height: 1160px; */
  padding-bottom: 168px;
  background-color: #f9d9dc;
  background-position: center;
  background-repeat: no-repeat;
}

#form-section-title {
  white-space: nowrap;
  font-style: normal;
  font-weight: 700;
  font-size: 58px;
  line-height: 70px;
  padding-top: 104px;
  margin-bottom: 78px;
  align-items: center;
  text-align: center;
}

@media screen and (max-width: 600px) {
  #form-section-title {
    white-space: wrap !important;
    font-size: 28px;
    padding-top: 50px;
  }
}

@media screen and (max-width: 780px) {
  /* #form-section-title {
    white-space: wrap !important;
    font-size: 28px;
    padding-top: 50px;
  } */

  #polling-form {
    width: 100vw !important;
  }
}

#polling-form {
  box-shadow: 0px 4px 0px 0px #00000040;
  background-color: white;
  margin: auto;
  padding-left: 55px;
  padding-right: 55px;
  padding-top: 38px;
  padding-bottom: 55px;
  border: 1px solid #000000;
  box-sizing: border-box;
  width: 818px;
  left: 347px;
}

.form-margin-bottom {
  margin-bottom: 35px !important;
}

.form-label {
  font-style: normal;
  font-weight: 600;
  font-size: 20px;
  line-height: 24px;
  display: flex;
  align-items: center;
  text-align: center;
  margin-bottom: 0px !important;
  padding-bottom: 14px;
}

.form-control {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 14px 16px;
  gap: 8px;
  font-style: normal;
  font-weight: 400 !important;
  font-size: 16px !important;
  line-height: 20px;
  width: 707px;
  height: 48px;
}

.form-select {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 14px 16px;
  gap: 8px;
  font-style: normal;
  font-weight: 400 !important;
  font-size: 16px !important;
  line-height: 20px;
  width: 707px;
  height: 48px;
}

.invalid {
  border: 1px solid red !important;
}

.unverified-postcode-disabled {
  background-color: rgb(238, 238, 238) !important;
}
.btn-outline-danger {
  margin-top: 14px !important;
}
/* ... */

